// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properly escapes quotes 1`] = `
<a
  className="normal"
  href="#"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  "Everythink" \\'is\\ 'awesome'
</a>
`;

exports[`renders as an anchor when no page is set 1`] = `
<a
  className="normal"
  href="#"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`renders correctly 1`] = `
<a
  className="normal"
  href="https://centrumrekodziela.pl"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Centrum
</a>
`;
